--- a/app/views/backofficers/passwords/new.html.erb
+++ b/app/views/backofficers/passwords/new.html.erb
@@ -1,16 +1,35 @@
-<h2>Forgot your password?</h2>
+<div class="panel panel-primary">
+  <div class="panel-heading"><h3>Resetar Senha - Envio de Email</h3></div>
+</div>
+<div class="container">
+  <div id="signupbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+      </div>
+      <div class="panel-body">
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= devise_error_messages! %>
+          <div class="form-group">
+            <%= f.label :email, class:"col-md-2 control-label" %>
+            <div class="col-md-9">
+              <%= f.email_field :email, autofocus: true, class:"form-control" %>
+            </div>
+          </div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+          <div class="form-group">
+            <div class="col-md-offset-2 col-md-9">
+              <%= f.submit "Enviar Instruções", class:"btn btn-info" do %>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
+</div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "backofficers/shared/links" %>
+<div class="centered">
+  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+    <%= link_to "Criar conta", new_registration_path(resource_name), class: "btn btn-success" %><br />
+  <% end -%>
+</div>
