--- a/app/views/backofficers/registrations/edit.html.erb
+++ b/app/views/backofficers/registrations/edit.html.erb
@@ -1,34 +1,50 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="panel panel-primary">
+  <div class="panel-heading"><h3>Resetar Senha</h3></div>
+</div>
+<div class="container">
+  <div id="signupbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+      </div>
+      <div class="panel-body">
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+              <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+              <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+              <% end %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+              <div class="form-group">
+                <%= f.label :Nova_Senha, class:"col-md-3 control-label" %>
+                <div class="col-md-9">
+                  <%= f.password_field :password, autocomplete: "off", class:"form-control" %>
+                </div>
+              </div>
 
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+              <div class="form-group">
+                <%= f.label :Confirmar_Senha, class:"col-md-3 control-label" %>
+                <div class="col-md-9">
+                  <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control" %>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <%= f.label :Senha_atual, class:"col-md-3 control-label" %>
+                <div class="col-md-9">
+                  <%= f.password_field :current_password, autocomplete: "off", class:"form-control" %>
+                </div>
+              </div>
+
+            <div class="form-group">
+              <div class="col-md-offset-3 col-md-9">
+                <%= f.submit "Salvar", class:"btn btn-info" do %>
+                <% end %>
+              </div>
+            </div>
+            <% end %>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Redefinir Senha" %>
-  </div>
-<% end %>
-
-<%= link_to "Back", :back %>
+<%= link_to "Voltar", :back, class: "btn btn-default" %>
