--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-primary">
-  <div class="panel-heading"><h3>Editar Incidente</h3></div>
+  <div class="panel-heading"><h3>Editar dados do Incidente</h3></div>
 </div>
 
 <%= render 'form', incident: @incident %>
-
+<%= link_to 'Lista de Incidentes', incidents_path, class: "btn btn-primary" %>
