analyst features + corrections

--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -20,9 +20,9 @@
           </div>
 
           <div class="form-group">
-            <%= f.label :description, class:"col-md-3 control-label" %>
+            <%= f.label :problem_description, class:"col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.text_field :description, autofocus: true, class:"form-control", placeholder:"Ex: O usúario x não consegue efetuar a opção y na tela z" %>
+              <%= f.text_field :problem_description, autofocus: true, class:"form-control", placeholder:"Ex: O usúario x não consegue efetuar a opção y na tela z" %>
             </div>
           </div>
 
