--- a/app/views/incidents/my_incidents.html.erb
+++ b/app/views/incidents/my_incidents.html.erb
@@ -13,6 +13,7 @@
   <table>
     <thead>
     <tr>
+      <th>ID do Incidente</th>
       <th>Resumo do Problema</th>
       <th>Nível de Criticidade</th>
       <th>Aberto Em</th>
@@ -23,36 +24,49 @@
       <% else %>
         <th>Relatado por</th>
       <% end %>
-      <th>Ações</th>
       <th colspan="3"></th>
     </tr>
     </thead>
     <tbody>
     <% @my_incidents.each do |incident| %>
       <tr style= "background: <%= cycle('white', 'ice') %>">
+        <td><%= incident.id %></td>
         <td><%= incident.title %></td>
         <td><%= incident.priority_level %></td>
         <td><%= brazil_date(incident.created_at) %></td>
         <td><%= brazil_date(incident.updated_at) %></td>
         <td><%= incident.status %></td>
-        <% if incident.analyst.blank? %>
-          <td><%= 'Sem atendimento' %> </td>
-        <% else %>
-          <td><%= incident.analyst.name %> </td>
-        <% end %>
-
         <% if backofficer_signed_in? %>
-          <td><%= link_to 'Ver Chamado', incident, class: "btn btn-primary"%></td>
-          <% if incident.status == 'open' || incident.status == 'reopened' %>
-            <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary"%></td>
-          <% elsif incident.status == 'solved' %>
-            <td><%= link_to 'Reabrir Incidente', edit_incident_path(incident), class: "btn btn-success" %></td>
-            <td><%= link_to 'Ver Solução', edit_incident_path(incident), class: "btn btn-default" %></td>
-          <% elsif incident.status == 'closed' %>
-            <td><%= link_to 'Ver Solução', edit_incident_path(incident), class: "btn btn-default" %></td>
+          <% if incident.analyst.blank? %>
+            <td><%= 'Sem atendimento' %> </td>
+          <% else %>
+            <td><%= incident.analyst.name %> </td>
           <% end %>
         <% else %>
-          <td><%= link_to 'Iniciar Análise', incident, class: "btn btn-success" %></td>
+          <td><%= incident.backofficer.name %></td>
+        <% end %>
+        <% if backofficer_signed_in? %>
+          <% if incident.status == 'open' || incident.status == 'reopened' %>
+            <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
+            <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary"%></td>
+          <% elsif incident.status == 'solved' %>
+            <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
+            <td><%= link_to 'Reabrir Incidente', edit_incident_path(incident), class: "btn btn-danger" %></td>
+          <% elsif incident.status == 'closed' %>
+            <td><%= link_to 'Detalhes', edit_incident_path(incident), class: "btn btn-default" %></td>
+            <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary disabled", :disabled => true %></td>
+
+          <% elsif incident.status == 'analysing' %>
+            <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
+            <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary disabled", :disabled => true %></td>
+          <% end %>
+        <% else %>
+          <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
+          <% if incident.status == 'open' %>
+            <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger" %></td>
+          <% else %>
+            <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %></td>
+          <% end %>
         <% end %>
       </tr>
     <% end %>
