--- a/app/views/backofficers/registrations/new.html.erb
+++ b/app/views/backofficers/registrations/new.html.erb
@@ -14,7 +14,7 @@
 
           <div class="field">
             <%= f.label :Nome, class:"col-md-3 control-label" %><br />
-            <%= f.email_field :name, autofocus: true, class: "form-control" %>
+            <%= f.text_field :name, autofocus: true, class: "form-control" %>
           </div>
 
 
