--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -22,7 +22,7 @@
           <div class="form-group">
             <%= f.label :problem_description, class:"col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.text_field :problem_description, autofocus: true, class:"form-control", placeholder:"Ex: O usúario x não consegue efetuar a opção y na tela z" %>
+              <%= f.text_area :problem_description, class:"form-control", placeholder:"Ex: O usúario x não consegue efetuar a opção y na tela z" %>
             </div>
           </div>
 
@@ -38,11 +38,34 @@
           </div>
 
           <div class="form-group">
-            <%= f.label :user_email, class:"col-md-3 control-label" %>
+            <%= f.label :plataform_kind, class:"col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.text_field :user_email, autofocus: true, class:"form-control", placeholder:"Ex: customer@tksg.com" %>
+              <%= f.select :plataform_kind, Incident::PLATAFORM.keys, { prompt: "Selecione em qual plataforma ocorre o erro." }, { class: "form-control"} %>
             </div>
           </div>
+
+
+          <div class="form-group">
+            <%= f.label :user_email, class:"col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.text_field :user_email, class:"form-control", placeholder:"Ex: customer@tksg.com" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :user_cpf, class:"col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.text_field :user_cpf, class:"form-control", placeholder:"Ex: 78066395353" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :contract_id, class:"col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.text_field :contract_id, class:"form-control", placeholder:"Ex: 17908" %>
+            </div>
+          </div>
+
           <div class="form-group">
             <div class="col-md-offset-3 col-md-9">
               <%= f.submit "Salvar", class:"btn btn-info" do %>
