--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -1,49 +1,91 @@
 <div class="panel panel-primary">
-  <div class="panel-heading">Detalhes</div>
+  <div class="panel-heading">Detalhes do Incidente</div>
   <div class="panel-body">
     <table class="table table-condensed">
       <thead>
         <tr>
-          <th>ID do Incidente</th>
-          <th>Título do Problema</th>
-          <th>Email do Usuário Afetado</th>
+          <th>ID</th>
           <th>Nível de Prioridade</th>
           <th>Reportador Por</th>
           <th>Aberto Em</th>
+          <th>Analista</th>
+          <th>Última Atualização</th>
           <th>Status do Incidente</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td><%= @incident.id %></td>
-          <td><%= @incident.title %></td>
-          <td><%= @incident.user_email %></td>
           <td><%= @incident.priority_level %></td>
           <td><%= @incident.backofficer.name %></td>
-          <td><%= brazil_date(@incident.created_at)  %></td>
+          <td><%= brazil_date(@incident.created_at) %></td>
+          <% if @incident.analyst.blank? %>
+            <td><%= 'Sem atendimento' %> </td>
+          <% else %>
+            <td><%= @incident.analyst.name %> </td>
+          <% end %>          <td><%= brazil_date(@incident.updated_at) %></td>
           <td><%= @incident.status %></td>
         </tr>
       </tbody>
     </table>
+  </div>
 
-  <div class="col-md-6">
-
-      <h4>Descrição do Problema</h4>
-      <br />
-      <%= @incident.problem_description %>
+  <hr>
+  <div class="panel-body">
+    <div class="col-md-4">
+      <div class="centered">
+        <h4>Descrição do Problema</h4>
+        <%= @incident.problem_description %>
+      </div>
     </div>
-    <div class="col-md-6">
-      <h4>Tela de Evidência</h4>
-      <br />
-      <%=  image_tag @incident.evidence_screen.url(:medium) %>
+    <div class="col-md-4">
+      <div class="centered">
+        <h4>Tela de Evidência</h4>
+        <%=  image_tag @incident.evidence_screen.url(:medium) %>
+      </div>
     </div>
-</div>
+    <div class="col-md-4">
+      <div class="centered">
+        <h4>Análise</h4>
+        <%= @incident.solution_description %>
+      </div>
+    </div>
+  </div>
+  <hr>
+
+  <div class="panel-body">
+    <table class="table table-condensed">
+      <thead>
+      <tr>
+        <th>Título do Problema</th>
+        <th>Email do Usuário</th>
+        <th>Número do Contrato</th>
+        <th>CPF do Usuário</th>
+        <% if @incident.status == 'solved' ||  @incident.status == 'closed' %>
+          <th>Escopo do Problema</th>
+          <th>Tipo do Erro</th>
+        <% end %>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td><%= @incident.title %></td>
+        <td><%= @incident.user_email %></td>
+        <td><%= @incident.contract_id %></td>
+        <td><%= @incident.user_cpf %></td>
+        <% if @incident.status == 'solved' ||  @incident.status == 'closed' %>
+          <td><%= @incident.problem_kind %></td>
+          <td><%= @incident.entity %></td>
+        <% end %>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 
-<hr>
 
 <div class="text-center">
-  <% if backofficer_signed_in? %>
+  <% if backofficer_signed_in? && @incident.status == 'open' %>
     <%= link_to 'Editar dados do incidente', edit_incident_path(@incident), class: "btn btn-default" %>
   <% elsif analyst_signed_in? %>
     <% if @incident.status == 'open'%>
@@ -53,9 +95,15 @@
     <% elsif @incident.status == 'analysing' && @incident.analyst_id == current_analyst.id %>
       <%= link_to 'Iniciar Análise', incident_analyse_path(@incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %>
       <%= "  |  " %>
-      <%= link_to 'Resolver Incidente', edit_incident_path(@incident), class: "btn btn-success" %>
+      <%= link_to 'Resolver Incidente', solve_form_path(id: @incident.id), method: :get, class: "btn btn-success" %>
     <% else %>
       <%= link_to 'Iniciar Análise', incident_analyse_path(@incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %>
+      <%= "  |  " %>
+
+
+      <%= link_to 'Pegar Incidente', incident_capture_path(@incident.id), method: :patch, class: "btn btn-success" %>
+
+
     <% end %>
     <% if @incident.status == 'closed' || @incident.status == 'solved' %>
       <%= "  |  " %>
