--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,12 +1,34 @@
 <div class="panel panel-primary">
   <div class="panel-heading" ><h3>Listagem de Incidentes</h3></div>
 </div>
+
 <% if backofficer_signed_in? %>
   <div class="centered">
     <td><%= link_to 'Novo Incidente', new_incident_path, class: "btn btn-success" %></td>
   </div>
   <br />
 <% end %>
+
+<div class="container">
+  <%= form_tag search_path, method: :get do %>
+    <div class="row">
+      <div class="well well-sm">
+        <div class="row">
+          <div class="col-lg-3"></div>
+          <div class="col-lg-6">
+            <div class="input-group">
+              <%= text_field_tag(:q, params[:q], { class:"form-control", placeholder:"Pesquisar incidente..." }) %>
+              <span class="input-group-btn">
+                <%= submit_tag("Pesquisar", class:"btn btn-default") %>
+              </span>
+            </div>
+          </div>
+          <div class="col-lg-3"></div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
 
 <div class="basic-grey" align="center">
   <table>
